.platform/deployments/internal-https-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-https-proxy
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: internal-https-proxy
  template:
    metadata:
      labels:
        app: internal-https-proxy
    spec:
      tolerations:
      - key: "kubernetes.io/arch"
        operator: "Equal"
        value: "arm64"
        effect: "NoSchedule"
      - key: "sandbox.gke.io/runtime"
        operator: "Equal"
        value: "gvisor"
        effect: "NoSchedule"
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
        - name: certs
          mountPath: /etc/nginx/certs
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: internal-https-proxy-config
      - name: certs
        secret:
          secretName: internal-arm-tls
---
apiVersion: v1
kind: Service
metadata:
  name: internal-https-service
  namespace: default
spec:
  clusterIP: 10.8.12.222
  selector:
    app: internal-https-proxy
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
