.platform/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arm-platform-ingress
  namespace: default
spec:
  ingressClassName: "gce-internal"
  rules:
  - host: keycloak.arm.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
  - host: gateway.arm.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: envoy-edge-guard-service
            port:
              number: 10000
